Rename 'maintain' => 'manage'
